# DjangoMailing

./: pyproject.toml
config/: settings.py  urls.py
maiiling/: urls.py  views.py
maiiling/templates/: base.html
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/templates/: base.html  create.html  delete.html  editing.html  home.html  mailing.html  mailing_detail.html  send_handmade.html  statistic_menu.html  update.html
mailling/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailling/managament/commands/: add_model.py  send_message.py
mailling/migrations/: 0001_initial.py  0002_alter_mail_body_mail_alter_mail_theme_and_more.py
mailling/templates/: base.html  create.html  create_mailling.html  create_recipient.html  delete.html  home.html  mailing.html  mailling_detail.html  send_messages_handmade.html  statistic_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_users_groups_alter_users_user_permissions.py
users/templates/: login.html  logout.html  profile.html  register.html
users/templatetags/: my_tags_user.py
