[tool.poetry]
name = "djangomailing"
version = "0.1.0"
description = ""
authors = ["Daniil <jeiromkrizhanovskiyd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
flake8 = "^7.1.2"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
